--- a/style.css
+++ b/style.css
@@ -1,35 +1,87 @@
 html{
-    background-color: rgb(17, 149, 232);
+    background-color: rgb(131, 198, 242);
 }
 
-*{
-    border: solid 1px rgb(255, 255, 255)
+* {
+    border: solid 1px rgb(0, 0, 0);
 }
 
 main{
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: columns;  
+    flex-direction: column;
     padding-top: 5rem;
     padding-bottom: 5rem;
 }
 
 .titulo h1{
-    color:black;
-    font-family: "Indie Flower", cursive;
-    font-family: "";
-    font-weight: 400;
+    color: rgb(228, 176, 3);
+    font-family: "Playwrite DE SAS", cursive;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
     font-style: normal;
 
-    .nav ul{
-        color: pink;
-        text-decoration: none;
-        background-color: blue;
-        display: flex;
-        flex-direction: column;
+
+}
 
 
+.nav a{
+    color: rgb(21, 32, 102);
+   text-decoration: none;
+   background-color: rgb(0, 0, 0);
+   padding: 1rem;
+   display: inline-block;
+    margin: 0.5rem;
+    border-radius: 5px ;
+
+}
+.nav ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    padding: 1px;
+}html{
+    background-color: rgb(123, 135, 12);
+}
+
+* {
+    border: solid 1px rgb(0, 0, 0);
+}
+
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+.titulo h1{
+    color: white;
+    font-family: "Playwrite DE SAS", cursive;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
 
 
+}
+
+
+.nav a{
+    color: rgb(102, 21, 21);
+   text-decoration: none;
+   background-color: azure;
+   padding: 1rem;
+   display: inline-block;
+    margin: 0.5rem;
+    border-radius: 5px ;
+
+}
+.nav ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    padding: 1px;
 }
